# serial_arm_lib

./: CMakeLists.txt  README.md  package.xml
include/serial_arm_lib/: serialArmKin.h
src/: serialArmKin.cpp
