<?xml version="1.0"?>
<package format="2">
  <name>serial_arm_lib</name>
  <version>0.0.0</version>
  <description>Library of classes to compute the kinematics and primitive motions for any Serial robotic Arm parameterized by an URDF file</description>

  <maintainer email="Joao.Moura@ed.ac.uk">Joao</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>urdf</depend>
  <depend>kdl_parser</depend>
<!--
  <depend>orocos_kdl</depend>
  <depend>std_msgs</depend>
  <depend>roslib</depend>
-->
</package>
